--- a/index.html
+++ b/index.html
@@ -4,9 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phone Hunting Api</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.2/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body>
-    
+    <header class="text-center mt-20 mb-10">
+      <h1 class="text-5xl">Hunting Phone</h1>
+    </header>
+    <main>
+       <section class="container mx-auto text-center">
+
+        <!-- input field -->
+        <section class="flex gap-3 justify-center mb-2">
+            <input id="search-field" type="text" placeholder="Search..." class="input bg-gray-200 input-ghost w-full max-w-xs" />
+            <button onclick="handleSearch()" class="btn btn-info">Search</button>
+            <input id="search-field2" type="text" placeholder="Search..." class="input bg-gray-200 input-ghost w-full max-w-xs" />
+            <button onclick="handleSearch2()" class="btn btn-success">Search</button>
+        </section>
+
+        <!-- spinner or loader -->
+          <div id="loading-spinner" class="hidden">
+            <span class="loading loading-dots loading-lg text-violet-700"></span>
+          </div>
+
+        <!-- search result -->
+             <h3>All phones Hera</h3>
+           <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 w-[100%] mx-auto p-10">
+            <!-- <div class="card w-96 bg-base-100 shadow-xl">
+                <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+                <div class="card-body">
+                  <h2 class="card-title">Shoes!</h2>
+                  <p>If a dog chews shoes whose shoes does he choose?</p>
+                  <div class="card-actions justify-end">
+                    <button class="btn btn-primary">Buy Now</button>
+                  </div>
+                </div>
+              </div> -->
+           </div>
+           <div id="show-all-container" class="hidden my-5">
+               <button onclick="handleShowAll()" class="btn btn-accent">Show All</button>
+           </div>
+       </section>
+
+
+       <!-- modal -->
+
+       <!-- Open the modal using ID.showModal() method -->
+        <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
+          <form method="dialog" class="modal-box">
+            <h3 id="show-detail-phone-name" class="font-bold text-lg"></h3>
+            
+            <div id="show-details-container">
+
+            </div>
+
+            <div class="modal-action">
+              <!-- if there is a button in form, it will close the modal -->
+              <button class="btn">Close</button>
+            </div>
+          </form>
+        </dialog>
+    </main>
+    <footer>
+
+    </footer>
 
     <script src="./js/index.js"></script>
 </body>
